vbnc/vbnc/vbnc/tests/Errors/32007-5.vb
Class T
    Const M_Char_Char As Char = 1UL
End Class